--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
         }
         .form-container {
             background: #ffffff;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            width: 300px;
+            width: 80%;
+            max-width: 500px;
+            box-sizing: border-box;
         }
         .form-container h2 {
             text-align: center;
@@ -37,10 +39,11 @@
         }
         .form-group input, .form-group select {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             border: 1px solid #dddddd;
             border-radius: 4px;
             font-size: 14px;
+            box-sizing: border-box;
         }
         .form-group button {
             background-color: #28a745;
@@ -62,6 +65,34 @@
             text-align: center;
             margin-top: 10px;
         }
+        .button-group {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            justify-content: center;
+            align-items: center;
+        }
+        .button-group button {
+            background-color: #f1f1f1;
+            color: #333;
+            border: 1px solid #dddddd;
+            padding: 15px;
+            font-size: 14px;
+            border-radius: 6px;
+            cursor: pointer;
+            width: 100%;
+            max-width: 300px;
+            text-align: center;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+        .button-group button.selected {
+            background-color: #28a745;
+            color: white;
+            transform: scale(1.05);
+        }
+        .button-group button:hover {
+            background-color: #e2e2e2;
+        }
     </style>
 </head>
 <body>
@@ -70,32 +101,22 @@
         <form id="gastosForm">
             <div class="form-group">
                 <label for="data">Data</label>
-                <input type="date" id="data" required>
-            </div>
-            <div class="form-group">
-                <label for="descricao">Descrição</label>
-                <input type="text" id="descricao" placeholder="Ex: Supermercado" required>
+                <input type="date" id="data" name="Data" required>
             </div>
             <div class="form-group">
                 <label for="categoria">Categoria</label>
-                <select id="categoria" required>
-                    <option value="Alimentação">Alimentação</option>
-                    <option value="Transporte">Transporte</option>
-                    <option value="Educação">Educação</option>
-                    <option value="Saúde">Saúde</option>
-                    <option value="Lazer">Lazer</option>
-                    <option value="Moradia">Moradia</option>
-                    <option value="Outros">Outros</option>
+                <select id="categoria" name="Categoria" required>
+                    <option value="">Selecione...</option>
                 </select>
             </div>
             <div class="form-group">
-                <label for="formaPagamento">Forma de Pagamento</label>
-                <input type="text" id="formaPagamento" placeholder="Ex: Cartão de crédito">
+                <label for="subcategoria">Subcategoria</label>
+                <select id="subcategoria" name="Subcategoria" required>
+                    <option value="">Selecione...</option>
+                </select>
             </div>
-            <div class="form-group">
-                <label for="valor">Valor</label>
-                <input type="number" id="valor" placeholder="Ex: 150.00" required>
-            </div>
+            <div class="form-group" id="subsubcategoria-container"></div>
+            <div class="form-group" id="opcoesAdicionais"></div>
             <div class="form-group">
                 <button type="submit">Registrar</button>
             </div>
@@ -104,33 +125,129 @@
     </div>
 
     <script>
-        document.getElementById("gastosForm").addEventListener("submit", function(e) {
-            e.preventDefault();
+        // Estrutura de dados: categorias, subcategorias, sub-subcategorias e campos adicionais
+        const dadosGastos = {
+            categorias: {
+                "1": {
+                    name: "Alimentação",
+                    subcategorias: {
+                        "1.1": { name: "Supermercado", camposAdicionais: ["Quilômetros Atuais", "Litros Abastecidos"] },
+                        "1.2": {
+                            name: "Restaurante", 
+                            subsubcategorias: {
+                                "1.2.1": "Almoço",
+                                "1.2.2": "Jantar",
+                                "1.2.3": "Lanche"
+                            }
+                        },
+                        "1.3": { name: "Suplementação" }
+                    }
+                },
+                "2": {
+                    name: "Saúde",
+                    subcategorias: {
+                        "2.1": { name: "Consulta", camposAdicionais: ["Quilômetros Atuais"] },
+                        "2.2": { name: "Exames", camposAdicionais: ["Descrição do Exame"] },
+                        "2.3": { name: "Medicamentos" }
+                    }
+                },
+                "3": {
+                    name: "Desporto",
+                    subcategorias: {
+                        "3.1": { name: "Ginásio" },
+                        "3.2": {
+                            name: "Equipamento",
+                            subsubcategorias: {
+                                "3.2.1": "Vestuário",
+                                "3.2.2": "Acessórios"
+                            }
+                        }
+                    }
+                }
+            }
+        };
 
-            const data = document.getElementById("data").value;
-            const descricao = document.getElementById("descricao").value;
-            const categoria = document.getElementById("categoria").value;
-            const formaPagamento = document.getElementById("formaPagamento").value;
-            const valor = document.getElementById("valor").value;
+        // Função para preencher as opções de categorias
+        function preencherCategorias() {
+            const categoriaSelect = document.getElementById("categoria");
+            Object.keys(dadosGastos.categorias).forEach(categoriaKey => {
+                const option = document.createElement("option");
+                option.value = categoriaKey;
+                option.textContent = dadosGastos.categorias[categoriaKey].name;
+                categoriaSelect.appendChild(option);
+            });
+        }
 
-            // URL do Google Apps Script
-            const scriptURL = "https://script.google.com/macros/s/AKfycbwvV-uBdgvkKsrhwIuhiT91LFmy1ACngv0bFGMbpQYHevkUB_VzQaskgPc2an28yHuAkg/exec";
+        // Função para preencher as opções de subcategorias
+        function preencherSubcategorias(categoriaKey) {
+            const subcategoriaSelect = document.getElementById("subcategoria");
+            subcategoriaSelect.innerHTML = `<option value="">Selecione...</option>`;
+            const subcategorias = dadosGastos.categorias[categoriaKey]?.subcategorias || {};
+            Object.keys(subcategorias).forEach(subcategoriaKey => {
+                const option = document.createElement("option");
+                option.value = subcategoriaKey;
+                option.textContent = subcategorias[subcategoriaKey].name;
+                subcategoriaSelect.appendChild(option);
+            });
+        }
 
-            // Dados a serem enviados
-            const formData = new FormData();
-            formData.append("Data", data);
-            formData.append("Descrição", descricao);
-            formData.append("Categoria", categoria);
-            formData.append("Forma de Pagamento", formaPagamento);
-            formData.append("Valor", valor);
+        // Função para mostrar as sub-subcategorias
+        function mostrarSubsubcategorias(categoriaKey, subcategoriaKey) {
+            const subsubcategoriaContainer = document.getElementById("subsubcategoria-container");
+            subsubcategoriaContainer.innerHTML = ""; // Limpar área anterior
+            const subsubcategorias = dadosGastos.categorias[categoriaKey]?.subcategorias[subcategoriaKey]?.subsubcategorias || {};
+            if (Object.keys(subsubcategorias).length > 0) {
+                const buttonGroup = document.createElement("div");
+                buttonGroup.classList.add("button-group");
+                Object.entries(subsubcategorias).forEach(([key, value]) => {
+                    const button = document.createElement("button");
+                    button.type = "button";
+                    button.classList.add("subsubcategoria-btn");
+                    button.textContent = value;
 
-            // Enviar os dados via POST para o Google Apps Script
-            fetch(scriptURL, { method: "POST", body: formData })
-                .then(response => {
-                    document.getElementById("successMessage").style.display = "block";
-                    document.getElementById("gastosForm").reset();
-                })
-                .catch(error => console.error("Erro ao registrar:", error));
+                    button.addEventListener("click", function () {
+                        document.querySelectorAll(".subsubcategoria-btn").forEach(btn => btn.classList.remove("selected"));
+                        button.classList.add("selected");
+                    });
+
+                    buttonGroup.appendChild(button);
+                });
+                subsubcategoriaContainer.appendChild(buttonGroup);
+            }
+        }
+
+        // Função para mostrar campos adicionais
+        function mostrarCamposAdicionais(categoriaKey, subcategoriaKey) {
+            const opcoesAdicionais = document.getElementById("opcoesAdicionais");
+            opcoesAdicionais.innerHTML = ""; // Limpar campos adicionais
+            const campos = dadosGastos.categorias[categoriaKey]?.subcategorias[subcategoriaKey]?.camposAdicionais || [];
+            campos.forEach(campo => {
+                const campoDiv = document.createElement("div");
+                campoDiv.classList.add("form-group");
+                campoDiv.innerHTML = `
+                    <label for="${campo}">${campo}</label>
+                    <input type="text" id="${campo}" name="${campo}" placeholder="Digite ${campo.toLowerCase()}">
+                `;
+                opcoesAdicionais.appendChild(campoDiv);
+            });
+        }
+
+        // Preenche as categorias e subcategorias ao carregar a página
+        document.addEventListener("DOMContentLoaded", function () {
+            preencherCategorias();
+            document.getElementById("categoria").addEventListener("change", function () {
+                const categoriaKey = this.value;
+                preencherSubcategorias(categoriaKey);
+                document.getElementById("subsubcategoria-container").innerHTML = ""; // Limpar subsubcategorias
+                document.getElementById("opcoesAdicionais").innerHTML = ""; // Limpar campos adicionais
+            });
+
+            document.getElementById("subcategoria").addEventListener("change", function () {
+                const categoriaKey = document.getElementById("categoria").value;
+                const subcategoriaKey = this.value;
+                mostrarSubsubcategorias(categoriaKey, subcategoriaKey);
+                mostrarCamposAdicionais(categoriaKey, subcategoriaKey);
+            });
         });
     </script>
 </body>
