--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
             background-color: #218838;
         }
         .valor-gasto {
-            background-color: #fff5e6;
             font-size: 16px;
-            border: 2px solid #ffc107;
             border-radius: 8px;
             padding: 15px;
             text-align: center;
@@ -72,6 +70,7 @@
             padding: 8px 12px;
             border: 1px solid #ddd;
             border-radius: 4px;
+            text-align: center;
         }
         .success-message {
             display: none;
@@ -134,7 +133,7 @@
             <div class="form-group" id="opcoesAdicionais"></div>
             <div class="form-group valor-gasto">
                 <label for="valor">Gasto</label>
-                <input type="number" id="valor" name="Valor" placeholder="--,-- €" min="0.01" step="0.01" required>
+                <input type="number" id="valor"name="Valor"placeholder="--,-- €"min="0.01" step="0.01" required>
             </div>
             <div class="form-group" id="subsubcategoria-container"></div>
             <div class="form-group" id="opcoesAdicionais"></div>
