--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         }
         .valor-gasto input {
             font-size: 18px;
-            width: auto;
+            width: 25%;
             padding: 8px 12px;
             border: 1px solid #ddd;
             border-radius: 4px;
@@ -133,7 +133,7 @@
             <div class="form-group" id="opcoesAdicionais"></div>
             <div class="form-group valor-gasto">
                 <label for="valor">Gasto</label>
-                <input type="number" id="valor"name="Valor"placeholder="--,-- €"min="0.01" step="0.01" required>
+                <input type="number" id="valor"name="Valor"placeholder="0000,00 €"min="0.01" step="0.01" required>
             </div>
             <div class="form-group" id="subsubcategoria-container"></div>
             <div class="form-group" id="opcoesAdicionais"></div>
