--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         }
         .valor-gasto input {
             font-size: 18px;
-            width: 25%;
+            width: 35%;
             padding: 8px 12px;
             border: 1px solid #ddd;
             border-radius: 4px;
@@ -105,7 +105,7 @@
             transform: scale(1.05);
         }
         .button-group button:hover {
-            background-color: #e2e2e2;
+            background-color: #28a745;
         }
     </style>
 </head>
