--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Gastos</title>
     <style>
+        /* Reset básico */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            background-color: #f7f8fa;
             margin: 0;
             padding: 0;
             display: flex;
@@ -15,63 +22,112 @@
             align-items: center;
             min-height: 100vh;
         }
+
         .form-container {
             background: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            width: 80%;
-            max-width: 500px;
+            width: 90%;
+            max-width: 400px;
             box-sizing: border-box;
         }
+
         .form-container h2 {
             text-align: center;
             color: #333333;
+            font-size: 20px;
+            margin-bottom: 20px;
         }
+
         .form-group {
             margin-bottom: 15px;
         }
+
         .form-group label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             font-size: 14px;
             color: #555555;
         }
-        .form-group input, .form-group select {
+
+        .form-group input,
+        .form-group select {
             width: 100%;
-            padding: 10px;
-            border: 1px solid #dddddd;
-            border-radius: 4px;
-            font-size: 14px;
-            box-sizing: border-box;
+            padding: 12px;
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+            font-size: 16px;
+            background-color: #f9f9f9;
+            outline: none;
+            transition: border-color 0.2s;
         }
+
+        .form-group input:focus,
+        .form-group select:focus {
+            border-color: #007aff;
+        }
+
         .form-group button {
-            background-color: #28a745;
+            background-color: #007aff;
             color: #ffffff;
             border: none;
-            border-radius: 4px;
-            padding: 10px;
+            border-radius: 8px;
+            padding: 12px;
             font-size: 16px;
             cursor: pointer;
             width: 100%;
+            transition: background-color 0.3s;
         }
+
         .form-group button:hover {
-            background-color: #218838;
+            background-color: #005bb5;
         }
+
         .valor-gasto {
-            font-size: 16px;
-            border-radius: 8px;
-            padding: 15px;
             text-align: center;
         }
+
         .valor-gasto input {
-            font-size: 18px;
-            width: 35%;
-            padding: 8px 12px;
+            font-size: 16px;
+            width: 100%;
+            padding: 12px;
             border: 1px solid #ddd;
-            border-radius: 4px;
+            border-radius: 8px;
             text-align: center;
         }
+
+        .button-group {
+            display: flex;
+            gap: 8px;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 10px;
+        }
+
+        .button-group button {
+            background-color: #f0f0f0;
+            color: #333;
+            border: 1px solid #e0e0e0;
+            padding: 10px 15px;
+            font-size: 14px;
+            border-radius: 6px;
+            cursor: pointer;
+            flex: 1;
+            text-align: center;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        .button-group button.selected {
+            background-color: #007aff;
+            color: white;
+            transform: scale(1.05);
+        }
+
+        .button-group button:hover {
+            background-color: #e0e0e0;
+        }
+
         .success-message {
             display: none;
             color: #28a745;
@@ -79,33 +135,27 @@
             text-align: center;
             margin-top: 10px;
         }
-        .button-group {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            justify-content: center;
-            align-items: center;
-        }
-        .button-group button {
-            background-color: #f1f1f1;
-            color: #333;
-            border: 1px solid #dddddd;
-            padding: 15px;
-            font-size: 14px;
-            border-radius: 6px;
-            cursor: pointer;
-            width: 100%;
-            max-width: 300px;
-            text-align: center;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-        .button-group button.selected {
-            background-color: #28a745;
-            color: white;
-            transform: scale(1.05);
-        }
-        .button-group button:hover {
-            background-color: #28a745;
+
+        @media (max-width: 375px) {
+            .form-container {
+                padding: 15px;
+            }
+
+            .form-group input,
+            .form-group select {
+                padding: 10px;
+                font-size: 14px;
+            }
+
+            .form-group button {
+                padding: 10px;
+                font-size: 14px;
+            }
+
+            .valor-gasto input {
+                padding: 10px;
+                font-size: 14px;
+            }
         }
     </style>
 </head>
@@ -129,146 +179,15 @@
                     <option value="">Selecione...</option>
                 </select>
             </div>
-            <div class="form-group" id="subsubcategoria-container"></div>
-            <div class="form-group" id="opcoesAdicionais"></div>
             <div class="form-group valor-gasto">
-                <label for="valor">Gasto</label>
-                <input type="number" id="valor"name="Valor"placeholder="0000,00 €"min="0.01" step="0.01" required>
+                <label for="valor">Valor (€)</label>
+                <input type="number" id="valor" name="Valor" placeholder="0000,00" min="0.01" step="0.01" required>
             </div>
-            <div class="form-group" id="subsubcategoria-container"></div>
-            <div class="form-group" id="opcoesAdicionais"></div>
             <div class="form-group">
                 <button type="submit">Registrar</button>
             </div>
         </form>
         <div class="success-message" id="successMessage">Gasto registrado com sucesso!</div>
     </div>
-
-    <script>
-        // Estrutura de dados: categorias, subcategorias, sub-subcategorias e campos adicionais
-        const dadosGastos = {
-            categorias: {
-                "1": {
-                    name: "Alimentação",
-                    subcategorias: {
-                        "1.1": { name: "Supermercado", camposAdicionais: ["Quilômetros Atuais", "Litros Abastecidos"] },
-                        "1.2": {
-                            name: "Restaurante", 
-                            subsubcategorias: {
-                                "1.2.1": "Almoço",
-                                "1.2.2": "Jantar",
-                                "1.2.3": "Lanche"
-                            }
-                        },
-                        "1.3": { name: "Suplementação" }
-                    }
-                },
-                "2": {
-                    name: "Saúde",
-                    subcategorias: {
-                        "2.1": { name: "Consulta", camposAdicionais: ["Quilômetros Atuais"] },
-                        "2.2": { name: "Exames", camposAdicionais: ["Descrição do Exame"] },
-                        "2.3": { name: "Medicamentos" }
-                    }
-                },
-                "3": {
-                    name: "Desporto",
-                    subcategorias: {
-                        "3.1": { name: "Ginásio" },
-                        "3.2": {
-                            name: "Equipamento",
-                            subsubcategorias: {
-                                "3.2.1": "Vestuário",
-                                "3.2.2": "Acessórios"
-                            }
-                        }
-                    }
-                }
-            }
-        };
-
-        // Função para preencher as opções de categorias
-        function preencherCategorias() {
-            const categoriaSelect = document.getElementById("categoria");
-            Object.keys(dadosGastos.categorias).forEach(categoriaKey => {
-                const option = document.createElement("option");
-                option.value = categoriaKey;
-                option.textContent = dadosGastos.categorias[categoriaKey].name;
-                categoriaSelect.appendChild(option);
-            });
-        }
-
-        // Função para preencher as opções de subcategorias
-        function preencherSubcategorias(categoriaKey) {
-            const subcategoriaSelect = document.getElementById("subcategoria");
-            subcategoriaSelect.innerHTML = `<option value="">Selecione...</option>`;
-            const subcategorias = dadosGastos.categorias[categoriaKey]?.subcategorias || {};
-            Object.keys(subcategorias).forEach(subcategoriaKey => {
-                const option = document.createElement("option");
-                option.value = subcategoriaKey;
-                option.textContent = subcategorias[subcategoriaKey].name;
-                subcategoriaSelect.appendChild(option);
-            });
-        }
-
-        // Função para mostrar as sub-subcategorias
-        function mostrarSubsubcategorias(categoriaKey, subcategoriaKey) {
-            const subsubcategoriaContainer = document.getElementById("subsubcategoria-container");
-            subsubcategoriaContainer.innerHTML = ""; // Limpar área anterior
-            const subsubcategorias = dadosGastos.categorias[categoriaKey]?.subcategorias[subcategoriaKey]?.subsubcategorias || {};
-            if (Object.keys(subsubcategorias).length > 0) {
-                const buttonGroup = document.createElement("div");
-                buttonGroup.classList.add("button-group");
-                Object.entries(subsubcategorias).forEach(([key, value]) => {
-                    const button = document.createElement("button");
-                    button.type = "button";
-                    button.classList.add("subsubcategoria-btn");
-                    button.textContent = value;
-                    button.addEventListener("click", () => {
-                        document.querySelectorAll(".subsubcategoria-btn").forEach(btn => btn.classList.remove("selected"));
-                        button.classList.add("selected");
-                    });
-                    buttonGroup.appendChild(button);
-                });
-                subsubcategoriaContainer.appendChild(buttonGroup);
-            }
-        }
-
-        // Função para mostrar campos adicionais
-        function mostrarCamposAdicionais(categoriaKey, subcategoriaKey) {
-            const opcoesAdicionais = document.getElementById("opcoesAdicionais");
-            opcoesAdicionais.innerHTML = ""; // Limpar campos adicionais
-            const campos = dadosGastos.categorias[categoriaKey]?.subcategorias[subcategoriaKey]?.camposAdicionais || [];
-            campos.forEach(campo => {
-                opcoesAdicionais.innerHTML += `
-                    <div class="form-group">
-                        <label for="${campo}">${campo}</label>
-                        <input type="text" id="${campo}" name="${campo}" placeholder="Digite o valor">
-                    </div>
-                `;
-            });
-        }
-
-        // Evento para selecionar a categoria
-        document.getElementById("categoria").addEventListener("change", function () {
-            const categoriaKey = this.value;
-            preencherSubcategorias(categoriaKey);
-            document.getElementById("subsubcategoria-container").innerHTML = ""; // Limpar sub-subcategorias
-            document.getElementById("opcoesAdicionais").innerHTML = ""; // Limpar campos adicionais
-        });
-
-        // Evento para selecionar a subcategoria
-        document.getElementById("subcategoria").addEventListener("change", function () {
-            const categoriaKey = document.getElementById("categoria").value;
-            const subcategoriaKey = this.value;
-            mostrarSubsubcategorias(categoriaKey, subcategoriaKey);
-            mostrarCamposAdicionais(categoriaKey, subcategoriaKey);
-        });
-
-        // Inicializa a categoria e subcategoria com o primeiro valor
-        document.addEventListener("DOMContentLoaded", function () {
-            preencherCategorias();
-        });
-    </script>
 </body>
 </html>
