--- a/index.html
+++ b/index.html
@@ -233,7 +233,72 @@
                             }
                         }
                     }
-                }
+                },"4": {
+            name: "Vestuário",
+            subcategorias: {
+                "4.1": { name: "Camisola" },
+                "4.2": { name: "Camisa" },
+                "4.3": { name: "Casaco" },
+                "4.4": { name: "Calças" },
+                "4.5": { name: "Boxers" },
+                "4.6": { name: "Meias" },
+                "4.7": { name: "Polos" },
+                "4.8": { name: "T-shirts" }
+            }
+        },
+        "5": {
+            name: "Calçado",
+            subcategorias: {
+                "5.1": { name: "Nike" },
+                "5.2": { name: "Adidas" },
+                "5.3": { name: "New Balance" },
+                "5.4": { name: "Lacoste" },
+                "5.5": { name: "Outro" }
+            }
+        },
+        "6": {
+            name: "Automóvel",
+            subcategorias: {
+                "6.1": { name: "Abastecimento" },
+                "6.2": { name: "Portagens" },
+                "6.3": { name: "Seguro" },
+                "6.4": { name: "Estacionamento" },
+                "6.5": { name: "IUC" },
+                "6.6": { name: "Manutenção" },
+                "6.7": { name: "Peças" },
+                "6.8": { name: "Pneus" },
+                "6.9": { name: "Avarias" },
+                "6.10": { name: "Multas" },
+                "6.11": { name: "Outro" }
+            }
+        },
+        "7": {
+            name: "Casa",
+            subcategorias: {
+                "7.1": { name: "Renda" },
+                "7.2": { name: "Despesas Gerais" }
+            }
+        },
+        "8": {
+            name: "Lazer",
+            subcategorias: {
+                "8.1": { name: "Café/Bar" },
+                "8.2": { name: "Cinema" },
+                "8.3": { name: "Karts" }
+            }
+        },
+        "9": {
+            name: "Cuidados Pessoais",
+            subcategorias: {
+                "9.1": { name: "Cabeleireiro" },
+                "9.2": { name: "Depilação" },
+                "9.3": { name: "Perfumes" }
+            }
+        },
+        "10": {
+            name: "Eletrônica",
+            subcategorias: {}
+        }
             }
         };
         // Função para definir a data atual no campo de data
