--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="form-group" id="opcoesAdicionais"></div>
             <div class="form-group valor-gasto">
                 <label for="valor">Gasto</label>
-                <input type="number" id="valor"name="Valor"placeholder="0000,00 €"min="0.01" step="0.01" required>
+                <input type="text" id="valor"name="Valor"placeholder="0000,00 €">
             </div>
             <div class="form-group" id="subsubcategoria-container"></div>
             <div class="form-group" id="opcoesAdicionais"></div>
