--- a/index.html
+++ b/index.html
@@ -403,6 +403,14 @@
                 "11.3": { name: "Apostas"  },
                 "12.4": { name: "Outro" }
             }
+        },
+        "12": {
+            name: "Banco",
+            subcategorias: {
+                "12.1": { name: "Manutenção de conta"  },
+                "12.2": { name: "Comissão MBway"  },
+                "12.3": { name: "Outro" }
+            }
         }
             }
         };
