--- a/index.html
+++ b/index.html
@@ -212,7 +212,16 @@
                                 "1.2.3": "Lanche"
                             }
                         },
-                        "1.3": { name: "Suplementação" }
+                        "1.3": { name: "Suplementação", camposAdicionais: ["Descrição"],
+                            subsubcategorias: {
+                                "1.3.1": "Proteina",
+                                "1.3.2": "Creatina",
+                                "1.3.3": "Cremes para barrar",
+                                "1.3.4": "Aveia",
+                                "1.3.5": "Outros"
+                            }
+                        },
+                        "1.4": { name: "Capsulas de café"}
                     }
                 },
                 "2": {
