adicionadas ferias e viagens

--- a/index.html
+++ b/index.html
@@ -383,7 +383,9 @@
             subcategorias: {
                 "8.1": { name: "Café/Bar", camposAdicionais: ["Descrição"] },
                 "8.2": { name: "Cinema", camposAdicionais: ["Descrição"] },
-                "8.3": { name: "Karts", camposAdicionais: ["Descrição"] }
+                "8.3": { name: "Viagens", camposAdicionais: ["Descrição"] },
+                "8.4": { name: "Férias", camposAdicionais: ["Descrição"] },
+                "8.5": { name: "Karts", camposAdicionais: ["Descrição"] }
             }
         },
         "9": {
