--- a/index.html
+++ b/index.html
@@ -422,6 +422,14 @@
                 "12.2": { name: "Comissão MBway"  },
                 "12.3": { name: "Outro" }
             }
+        },
+        "13": {
+            name: "Investimentos",
+            subcategorias: {
+                "13.1": { name: "XTB", camposAdicionais: ["Descrição"]  },
+                "13.2": { name: "PPR", camposAdicionais: ["Descrição"]  },
+                "13.3": { name: "Outro", camposAdicionais: ["Descrição"] }
+            }
         }
             }
         };
