--- a/index.html
+++ b/index.html
@@ -430,7 +430,12 @@
                 "13.2": { name: "PPR", camposAdicionais: ["Descrição"]  },
                 "13.3": { name: "Outro", camposAdicionais: ["Descrição"] }
             }
-        }
+        },
+            "14": {
+                name: "Outros",
+                subcategorias: {
+                    "14.1": { name: "Prenda", camposAdicionais: ["Descrição"] }
+                }
             }
         };
         // Função para definir a data atual no campo de data
